--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="img/logo/logo.jpg" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/logo/logo.jpg">
+    <link rel="shortcut icon" href="img/logo/logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/logo/logo.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -49,15 +49,15 @@
                                     <i class="fab fa-opencart"></i> 20% Off for Student
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> 50% - 80% off on Fashion
+                                    <i class="fab fa-opencart"></i> Amazing quality
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT20
-                                </li>
+                                    <i class="fab fa-opencart"></i> Custom Designs
+				</li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> Off 50%! Shop Now
+                                    <i class="fab fa-opencart"></i> Shop Now !
                                 </li>
-                                <li>
+                                <!--li>
                                     <i class="fab fa-opencart"></i> Off 10%! Shop Now Man
                                 </li>
                                 <li>
@@ -68,7 +68,7 @@
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Off 50%! Shop Now
-                                </li>
+                                </li-->
                             </ul>
                         </div>
                     </div>
@@ -76,18 +76,17 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="custom-select-box">
                         <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
-						<option>¥ JPY</option>
-						<option>$ USD</option>
-						<option>€ EUR</option>
+						<option>UPI</option>
+						<option>Cash</option>
 					</select>
                     </div>
                     <div class="right-phone-box">
-                        <p>Call US :- <a href="#"> +11 900 800 100</a></p>
+                        <p>Call US :- <a href="tel//7014759453"> +91 7014759453</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#">Our location</a></li>
+                            <!--li><a href="#">My Account</a></li-->
+                            <li><a href="#">Our locations</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
@@ -107,7 +106,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo/logo.png" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
@@ -122,50 +121,50 @@
                                 <li>
                                     <div class="row">
                                         <div class="col-menu col-md-3">
-                                            <h6 class="title">Top</h6>
+                                            <h6 class="title">T-Shirt</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop.html">Jackets</a></li>
-                                                    <li><a href="shop.html">Shirts</a></li>
-                                                    <li><a href="shop.html">Sweaters & Cardigans</a></li>
-                                                    <li><a href="shop.html">T-shirts</a></li>
+                                                    <li><a href="">GECA</a></li>
+                                                    <li><a href="">GCA</a></li>
+                                                    <li><a href="">RIE</a></li>
+                                                    <li><a href="">Sofia</a></li>
                                                 </ul>
                                             </div>
                                         </div>
                                         <!-- end col-3 -->
                                         <div class="col-menu col-md-3">
-                                            <h6 class="title">Bottom</h6>
-                                            <div class="content">
+                                            <h6 class="title">Hoodies</h6>
+                                            <!--div class="content">
                                                 <ul class="menu-col">
                                                     <li><a href="shop.html">Swimwear</a></li>
                                                     <li><a href="shop.html">Skirts</a></li>
                                                     <li><a href="shop.html">Jeans</a></li>
                                                     <li><a href="shop.html">Trousers</a></li>
                                                 </ul>
-                                            </div>
+                                            </div-->
                                         </div>
                                         <!-- end col-3 -->
                                         <div class="col-menu col-md-3">
-                                            <h6 class="title">Clothing</h6>
-                                            <div class="content">
+                                            <h6 class="title">Cap</h6>
+                                            <!--div class="content">
                                                 <ul class="menu-col">
                                                     <li><a href="shop.html">Top Wear</a></li>
                                                     <li><a href="shop.html">Party wear</a></li>
                                                     <li><a href="shop.html">Bottom Wear</a></li>
                                                     <li><a href="shop.html">Indian Wear</a></li>
                                                 </ul>
-                                            </div>
+                                            </div-->
                                         </div>
                                         <div class="col-menu col-md-3">
-                                            <h6 class="title">Accessories</h6>
-                                            <div class="content">
+                                            <h6 class="title">Shirt</h6>
+                                            <!--div class="content">
                                                 <ul class="menu-col">
                                                     <li><a href="shop.html">Bags</a></li>
                                                     <li><a href="shop.html">Sunglasses</a></li>
                                                     <li><a href="shop.html">Fragrances</a></li>
                                                     <li><a href="shop.html">Wallets</a></li>
                                                 </ul>
-                                            </div>
+                                            </div-->
                                         </div>
                                         <!-- end col-3 -->
                                     </div>
@@ -173,7 +172,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown">
+                        <!--li class="dropdown">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">SHOP</a>
                             <ul class="dropdown-menu">
                                 <li><a href="cart.html">Cart</a></li>
@@ -182,15 +181,15 @@
                                 <li><a href="wishlist.html">Wishlist</a></li>
                                 <li><a href="shop-detail.html">Shop Detail</a></li>
                             </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="service.html">Our Service</a></li>
+                        </li-->
+                        <li class="nav-item"><a class="nav-link" href="service.html">Locations</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
 
                 <!-- Start Atribute Navigation -->
-                <div class="attr-nav">
+                <!--div class="attr-nav">
                     <ul>
                         <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
                         <li class="side-menu"><a href="#">
