--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><img src="img/logo/logo.png height="64px" width="108.3px" class="logo" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo/logo.png" height="64px" width="108.3px" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
