--- a/index.html
+++ b/index.html
@@ -355,7 +355,9 @@
             </div-->
 
             <div class="row special-list">
-		
+		<div class="col-lg-12">
+			<h2> T-PIE Custom Collection </h2>
+		</div>
 		<div class="col-lg-3 col-md-6 special-grid best-seller">
 			<img src="img/product/30.jpeg" class="img-fluid" alt="Image">
 		</div>
@@ -366,8 +368,13 @@
 		 
 		<div class="col-lg-3 col-md-6 special-grid best-seller">
 			<img src="img/product/28.jpeg" class="img-fluid" alt="Image">
-		</div> 
-		 
+		</div>
+	   </div>
+		
+	   <div class="row special-list">
+		<div class="col-lg-12">
+			<h3>Some more products</h3>
+		</div>
 		<div class="col-lg-3 col-md-6 special-grid best-seller">
 			<img src="img/product/27.jpeg" class="img-fluid" alt="Image">
 		</div>    
