--- a/index.html
+++ b/index.html
@@ -776,14 +776,14 @@
                         <div class="footer-link-contact">
                             <h4>Contact Us</h4>
                             <ul>
-                                <li>
-                                    <p><i class="fas fa-map-marker-alt"></i>Address: Michael I. Days 3756 <br>Preston Street Wichita,<br> KS 67213 </p>
+ <li>
+                                    <p><i class="fas fa-map-marker-alt"></i>Address:<a href="location">A-302 HBU nagar main Pushkar road Ajmer</a> 
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:+1-888705770">+1-888 705 770</a></p>
+                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:7014759453">7014759453</a></p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-envelope"></i>Email: <a href="mailto:contactinfo@gmail.com">contactinfo@gmail.com</a></p>
+                                    <p><i class="fas fa-envelope"></i>Email: <a href="mailto:Tpie170324@gmail.com">Tpie170324@gmail.com</a></p>
                                 </li>
                             </ul>
                         </div>
@@ -796,7 +796,7 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
+        <p class="footer-company">All Rights Reserved. &copy; 2020 <a href="#">T-PIE</a> Design By :Yogendra sankhla and vibhanshu jain
             <a href="https://html.design/">html design</a></p>
     </div>
     <!-- End copyright  -->
