--- a/index.html
+++ b/index.html
@@ -745,8 +745,14 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
-                            <h4>About ThewayShop</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            <h4>About T-PIE</h4>
+                            <p>
+We, here at T-Pie, are devoted to give the best that a piece of clothing should exhibit. These are not just fabrics but a reflection of ones character to the eyes of observer. The material of cloth, the designs, the prints make you stand out of the queue.
+
+T-Pie tries effortlessly to do the same with the sense of understanding and being more respomsive and easily accessible to the customers.All this with the cheapest price with the advantage of being in the locality.
+So what are you waiting for?
+Place your first order here
+
                                 </p>
                             <ul>
                                 <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
