--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@ We, here at T-Pie, are devoted to give the best that a piece of clothing should 
 
 T-Pie tries effortlessly to do the same with the sense of understanding and being more respomsive and easily accessible to the customers.All this with the cheapest price with the advantage of being in the locality.
 So what are you waiting for?
-Place your first order here
+Place your first orders here!
 
                                 </p>
                             <ul>
