--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                 <div class="col-lg-12">
                     <div class="title-all text-center">
                         <h1>latest blog</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet lacus enim.</p>
+                        <p>Design a T-shirt and end up being the coolest.</p>
                     </div>
                 </div>
             </div>
@@ -597,8 +597,8 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>Fusce in augue non nisi fringilla</h3>
-                                <p>Nulla ut urna egestas, porta libero id, suscipit orci. Quisque in lectus sit amet urna dignissim feugiat. Mauris molestie egestas pharetra. Ut finibus cursus nunc sed mollis. Praesent laoreet lacinia elit id lobortis.</p>
+                                <h3>REMEMBER THE EVENT!!</h3>
+                                <p>Take advantage of annually recurring events by developing a consistent design concept that “ups its ante” each year. A “new and improved” t-shirt design implies that every conference will be different and better than the last. And each t-shirt becomes a collector’s item for participants—both of which encourage repeat attendance..</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
