--- a/index.html
+++ b/index.html
@@ -615,8 +615,8 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>Fusce in augue non nisi fringilla</h3>
-                                <p>Nulla ut urna egestas, porta libero id, suscipit orci. Quisque in lectus sit amet urna dignissim feugiat. Mauris molestie egestas pharetra. Ut finibus cursus nunc sed mollis. Praesent laoreet lacinia elit id lobortis.</p>
+                                <h3>T-shirts for parties and celebrations</h3>
+                                <p>The ultimate party shirt marks partygoers as members of an exclusive group, and it can also be badge of honor. After all, depending on how much alcohol is involved, epic parties need to be “survived.” While a t-shirt for your average house rager might be a little much, it works for milestone events like birthdays or for large-scale festivities like Christmas.</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
