--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                         <div class="blog-content">
                             <div class="title-blog">
                                 <h3>REMEMBER THE EVENT!!</h3>
-                                <p>Take advantage of annually recurring events by developing a consistent design concept that “ups its ante” each year. A “new and improved” t-shirt design implies that every conference will be different and better than the last. And each t-shirt becomes a collector’s item for participants—both of which encourage repeat attendance..</p>
+                                <p>If you’re hosting a conference, you’ve already got an audience that’s invested enough to buy a ticket, so a t-shirt purchase should be a no-brainer.Take advantage of annually recurring events by developing a consistent design concept that “ups its ante” each year. A “new and improved” t-shirt design implies that every conference will be different and better than the last. And each t-shirt becomes a collector’s item for participants—both of which encourage repeat attendance..</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
@@ -633,8 +633,8 @@
                         </div>
                         <div class="blog-content">
                             <div class="title-blog">
-                                <h3>REMEMBER </h3>
-                                <p>Nulla ut urna egestas, porta libero id, suscipit orci. Quisque in lectus sit amet urna dignissim feugiat. Mauris molestie egestas pharetra. Ut finibus cursus nunc sed mollis. Praesent laoreet lacinia elit id lobortis.</p>
+                                <h3>T-shirts for sports and fitness </h3>
+                                <p> While sports enthusiasts might be willing pledge their allegiance with a t-shirt, that doesn’t mean you get to slack off by lazily slapping the team’s logo on it. Try reimagining your logo, like the vintage approach taken with the San Francisco Baseball design. If you are a retailer, take advantage of equipment and other common imagery for a creative illustration that will appeal to the entire community around a particular sport.</p>
                             </div>
                             <ul class="option-blog">
                                 <li><a href="#" data-toggle="tooltip" data-placement="right" title="Likes"><i class="far fa-heart"></i></a></li>
