--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Basic -->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site Metas -->
-    <title>ThewayShop - Ecommerce Bootstrap 4 HTML Template</title>
+    <title>T-PIE</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="img/logo/logo.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/logo/logo.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -46,6 +45,18 @@
                         <div id="offer-box" class="carouselTicker">
                             <ul class="offer-box">
                                 <li>
+                                    <i class="fab fa-opencart"></i> 20% Off for Student
+                                </li>
+                                <li>
+                                    <i class="fab fa-opencart"></i> Amazing quality
+                                </li>
+                                <li>
+                                    <i class="fab fa-opencart"></i> Custom Designs
+				</li>
+                                <li>
+                                    <i class="fab fa-opencart"></i> Shop Now !
+                                </li>
+                                <!--li>
                                     <i class="fab fa-opencart"></i> Off 10%! Shop Now Man
                                 </li>
                                 <li>
@@ -56,19 +67,7 @@
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Off 50%! Shop Now
-                                </li>
-                                <li>
-                                    <i class="fab fa-opencart"></i> Off 10%! Shop Now Man
-                                </li>
-                                <li>
-                                    <i class="fab fa-opencart"></i> 50% - 80% off on Fashion
-                                </li>
-                                <li>
-                                    <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT20
-                                </li>
-                                <li>
-                                    <i class="fab fa-opencart"></i> Off 50%! Shop Now
-                                </li>
+                                </li-->
                             </ul>
                         </div>
                     </div>
@@ -76,18 +75,17 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="custom-select-box">
                         <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
-						<option>¥ JPY</option>
-						<option>$ USD</option>
-						<option>€ EUR</option>
+						<option>UPI</option>
+						<option>Cash</option>
 					</select>
                     </div>
                     <div class="right-phone-box">
-                        <p>Call US :- <a href="#"> +11 900 800 100</a></p>
+                        <p>Call US :- <a href="tel//7014759453"> +91 7014759453</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#">Our location</a></li>
+                            <!--li><a href="#">My Account</a></li-->
+                            <li><a href="#">Our locations</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
@@ -107,65 +105,65 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><!--img src="img/logo/logo.png" height="64px" width="108.3px" class="logo" alt=""--><b>T-PIE</b></a>
                 </div>
                 <!-- End Header Navigation -->
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="about.html">About Us</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
                         <li class="dropdown megamenu-fw">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Product</a>
                             <ul class="dropdown-menu megamenu-content" role="menu">
                                 <li>
                                     <div class="row">
                                         <div class="col-menu col-md-3">
-                                            <h6 class="title">Top</h6>
+                                            <h6 class="title">T-Shirt</h6>
                                             <div class="content">
                                                 <ul class="menu-col">
-                                                    <li><a href="shop.html">Jackets</a></li>
-                                                    <li><a href="shop.html">Shirts</a></li>
-                                                    <li><a href="shop.html">Sweaters & Cardigans</a></li>
-                                                    <li><a href="shop.html">T-shirts</a></li>
+                                                    <li><a href="">GECA</a></li>
+                                                    <li><a href="">GCA</a></li>
+                                                    <li><a href="">RIE</a></li>
+                                                    <li><a href="">Sofia</a></li>
                                                 </ul>
                                             </div>
                                         </div>
                                         <!-- end col-3 -->
                                         <div class="col-menu col-md-3">
-                                            <h6 class="title">Bottom</h6>
-                                            <div class="content">
+                                            <h6 class="title">Hoodies</h6>
+                                            <!--div class="content">
                                                 <ul class="menu-col">
                                                     <li><a href="shop.html">Swimwear</a></li>
                                                     <li><a href="shop.html">Skirts</a></li>
                                                     <li><a href="shop.html">Jeans</a></li>
                                                     <li><a href="shop.html">Trousers</a></li>
                                                 </ul>
-                                            </div>
+                                            </div-->
                                         </div>
                                         <!-- end col-3 -->
                                         <div class="col-menu col-md-3">
-                                            <h6 class="title">Clothing</h6>
-                                            <div class="content">
+                                            <h6 class="title">Cap</h6>
+                                            <!--div class="content">
                                                 <ul class="menu-col">
                                                     <li><a href="shop.html">Top Wear</a></li>
                                                     <li><a href="shop.html">Party wear</a></li>
                                                     <li><a href="shop.html">Bottom Wear</a></li>
                                                     <li><a href="shop.html">Indian Wear</a></li>
                                                 </ul>
-                                            </div>
+                                            </div-->
                                         </div>
                                         <div class="col-menu col-md-3">
-                                            <h6 class="title">Accessories</h6>
-                                            <div class="content">
+                                            <h6 class="title">Shirt</h6>
+                                            <!--div class="content">
                                                 <ul class="menu-col">
                                                     <li><a href="shop.html">Bags</a></li>
                                                     <li><a href="shop.html">Sunglasses</a></li>
                                                     <li><a href="shop.html">Fragrances</a></li>
                                                     <li><a href="shop.html">Wallets</a></li>
                                                 </ul>
-                                            </div>
+                                            </div-->
                                         </div>
                                         <!-- end col-3 -->
                                     </div>
@@ -173,7 +171,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="dropdown">
+                        <!--li class="dropdown">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">SHOP</a>
                             <ul class="dropdown-menu">
                                 <li><a href="cart.html">Cart</a></li>
@@ -182,15 +180,15 @@
                                 <li><a href="wishlist.html">Wishlist</a></li>
                                 <li><a href="shop-detail.html">Shop Detail</a></li>
                             </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="service.html">Our Service</a></li>
+                        </li-->
+                        <li class="nav-item"><a class="nav-link" href="service.html">Locations</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
 
                 <!-- Start Atribute Navigation -->
-                <div class="attr-nav">
+                <!--div class="attr-nav">
                     <ul>
                         <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
                         <li class="side-menu"><a href="#">
@@ -200,7 +198,7 @@
                     </ul>
                 </div>
                 <!-- End Atribute Navigation -->
-            </div>
+        </div>
             <!-- Start Side Menu -->
             <div class="side">
                 <a href="#" class="close-side"><i class="fa fa-times"></i></a>
@@ -508,8 +506,14 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
-                            <h4>About ThewayShop</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            <h4>About T-PIE</h4>
+                            <p>
+We, here at T-Pie, are devoted to give the best that a piece of clothing should exhibit. These are not just fabrics but a reflection of ones character to the eyes of observer. The material of cloth, the designs, the prints make you stand out of the queue.
+
+T-Pie tries effortlessly to do the same with the sense of understanding and being more respomsive and easily accessible to the customers.All this with the cheapest price with the advantage of being in the locality.
+So what are you waiting for?
+Place your first orders here!
+
                                 </p>
                             <ul>
                                 <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
@@ -539,14 +543,14 @@
                         <div class="footer-link-contact">
                             <h4>Contact Us</h4>
                             <ul>
-                                <li>
-                                    <p><i class="fas fa-map-marker-alt"></i>Address: Michael I. Days 3756 <br>Preston Street Wichita,<br> KS 67213 </p>
+ <li>
+                                    <p><i class="fas fa-map-marker-alt"></i>Address:<a href="location">A-302 HBU nagar main Pushkar road Ajmer</a> 
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:+1-888705770">+1-888 705 770</a></p>
+                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:7014759453">7014759453</a></p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-envelope"></i>Email: <a href="mailto:contactinfo@gmail.com">contactinfo@gmail.com</a></p>
+                                    <p><i class="fas fa-envelope"></i>Email: <a href="mailto:tpie170324@gmail.com">tpie170324@gmail.com</a></p>
                                 </li>
                             </ul>
                         </div>
@@ -559,10 +563,11 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
-            <a href="https://html.design/">html design</a></p>
+        <p class="footer-company">T-PIE &copy; 2020 &nbsp; <br>
+		</p>
     </div>
     <!-- End copyright  -->
+
 
     <a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
 
