--- a/contact-us.html
+++ b/contact-us.html
@@ -114,7 +114,7 @@
                     <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
                         <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                        <li class="dropdown megamenu-fw">
+                        <!--li class="dropdown megamenu-fw">
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Product</a>
                             <ul class="dropdown-menu megamenu-content" role="menu">
                                 <li>
@@ -130,7 +130,7 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                        <!-- end col-3 -->
+                                        <!-- end col-3 ->
                                         <div class="col-menu col-md-3">
                                             <h6 class="title">Hoodies</h6>
                                             <!--div class="content">
@@ -140,9 +140,9 @@
                                                     <li><a href="shop.html">Jeans</a></li>
                                                     <li><a href="shop.html">Trousers</a></li>
                                                 </ul>
-                                            </div-->
+                                            </div->
                                         </div>
-                                        <!-- end col-3 -->
+                                        <!-- end col-3 ->
                                         <div class="col-menu col-md-3">
                                             <h6 class="title">Cap</h6>
                                             <!--div class="content">
@@ -152,7 +152,7 @@
                                                     <li><a href="shop.html">Bottom Wear</a></li>
                                                     <li><a href="shop.html">Indian Wear</a></li>
                                                 </ul>
-                                            </div-->
+                                            </div->
                                         </div>
                                         <div class="col-menu col-md-3">
                                             <h6 class="title">Shirt</h6>
@@ -163,11 +163,11 @@
                                                     <li><a href="shop.html">Fragrances</a></li>
                                                     <li><a href="shop.html">Wallets</a></li>
                                                 </ul>
-                                            </div-->
+                                            </div->
                                         </div>
-                                        <!-- end col-3 -->
+                                        <!-- end col-3 ->
                                     </div>
-                                    <!-- end row -->
+                                    <!-- end row ->
                                 </li>
                             </ul>
                         </li>
@@ -466,6 +466,10 @@ Place your first orders here!
                                 </li>
                                 <li>
                                     <p><i class="fas fa-envelope"></i>Email: <a href="mailto:tpie170324@gmail.com">tpie170324@gmail.com</a></p>
+                                </li>
+                                <li>
+									<h3><br>Hit Counter<br></h3>
+									<a href="https://www.freecounterstat.com" title="web page counter"><img src="https://counter2.stat.ovh/private/freecounterstat.php?c=gjdn96w7y6eccp3gzfc1nfurtd18hrc2" border="0" title="web page counter" alt="web page counter"></a>
                                 </li>
                             </ul>
                         </div>
