--- a/about.html
+++ b/about.html
@@ -274,12 +274,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h2 class="noo-sh-title">We are <span>ThewayShop</span></h2>
-                    <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                        voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-                        sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
-                        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <h2 class="noo-sh-title">We are <span>T-pie</span></h2>
+                    <p>Welcome to our jungle of insanity!
+We are so grateful,  you came to read this corner of our page which most people probably tend to skip, but since you made your true generous effort to scroll down here, come in we're awesome!
+Tale of T-pie
+We are early 2000 straight fire kids, who collectively came together with some dope ideas of spreading happiness by funky printed wearables. Our philosophy behind  T - pie is to do what you love and love what you do   - "comfort your pieces ". The simple fact of this philosophy is to make you feel lively every day, experience the big wild world with your at most comfortability, believe yourself, and hop out spreading smiles! 
+We do work peps! 
+We create and curate remarkable designs and visualize them on vibrant graded fabrics. Our products indulge bringing you the best that a piece of clothing must exhibit, the rank of cloth, the make- up design, and the eye-catchy prints make you stand out of the queue. We work to offer our finest skills to fabricate and supply more conveniently at considerable expenses, moreover, we work for your happy faces, so if you’re looking for great products, with even greater deals, you’ve come to the exact right place!
+
+Note :
+**T-pie has no intentions to release such epic collections that make you look stunning cool, we tried our best to educate ourselves on not to make it crazy bravo, but unfortunately, we make mistakes and end up being the coolest.***
+We are sorry for being lit!
+      ~Sic T- pie
+
                         </p>
                 </div>
                 <div class="col-lg-6">
