--- a/about.html
+++ b/about.html
@@ -275,7 +275,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2 class="noo-sh-title"> <span>Tie-hie</span></h2>
-                    <p>Welcome to our jungle of insanity!
+			<p><em>Welcome to our jungle of insanity!</em>
 			    <br><br>
 We are so grateful,  you came to read this corner of our page which most people probably tend to skip, but since you made your true generous effort to scroll down here, come in we're awesome!
 <br>
