--- a/about.html
+++ b/about.html
@@ -300,7 +300,7 @@ We are sorry for being lit!
                     </div>
                 </div>
             </div>
-            <div class="row my-5">
+            <!--div class="row my-5">
                 <div class="col-sm-6 col-lg-4">
                     <div class="service-block-inner">
                         <h3>We are Trusted</h3>
@@ -319,7 +319,7 @@ We are sorry for being lit!
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                     </div>
                 </div>
-            </div>
+            </div-->
             <div class="row my-4">
                 <div class="col-12">
                     <h2 class="noo-sh-title">Meet Our Team</h2>
