--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                                 </li>
                                 <li>
                                     <i class="fab fa-opencart"></i> Custom Designs
-				</li>
+								</li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> Shop Now !
+                                    <a href="" style="color:white"><i class="fab fa-opencart"></i> Shop Now !</a>
                                 </li>
                                 <!--li>
                                     <i class="fab fa-opencart"></i> Off 10%! Shop Now Man
@@ -191,7 +191,7 @@
                                 <li><a href="shop-detail.html">Shop Detail</a></li>
                             </ul>
                         </li-->
-                        <li class="nav-item"><a class="nav-link" href="service.html">Locations</a></li>
+                        <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
