--- a/service.html
+++ b/service.html
@@ -191,7 +191,7 @@
                                 <li><a href="shop-detail.html">Shop Detail</a></li>
                             </ul>
                         </li-->
-                        <li class="nav-item"><a class="nav-link" href="service.html">Locations</a></li>
+                        <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
