Contact form activated

--- a/contact-us.html
+++ b/contact-us.html
@@ -295,11 +295,23 @@
                     <div class="contact-form-right">
                         <h2>GET IN TOUCH</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio justo, ultrices ac nisl sed, lobortis porta elit. Fusce in metus ac ex venenatis ultricies at cursus mauris.</p>
-                        <form id="contactForm">
+                        <form action="https://formspree.io/xyynzngw" method="POST">
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required data-error="Please enter your name">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <input type="text" placeholder="Your Number" id="number" class="form-control" name="name" required data-error="Please enter your number">
+                                        <div class="help-block with-errors"></div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <input type="text" placeholder="Your WhatsApp Number" id="what_number" class="form-control" name="name" required data-error="Please enter your WhatsApp number">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
