--- a/service.html
+++ b/service.html
@@ -277,37 +277,43 @@
                 <div class="col-sm-6 col-lg-4">
                     <div class="service-block-inner">
                         <h3>OUR MISSION</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <p>we bring personalized custom wearings in the  way  more easy  for you and your chunky gang, with the simplest and fastest process at the right front of your windows, No more walking stussy  annoying stores , focus more on your fun jobs , we'll handle the rest! 
+ </p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="service-block-inner">
-                        <h3>OUR VISION</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="service-block-inner">
                         <h3>OUR PHILOSOPHY</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <p>Making an impact through innovation , we're trying tougher to unroll  the simple fact of " comforting your pieces " by living  our own defined lives, here upon. T-pie is a smile telling you that you are different and you are coolest , so pick out your crazy kinds  YOLO!
+ </p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="service-block-inner">
                         <h3>We are Trusted</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <p>For premium quality , saving pockets and fast deliveries , we care for you fam,
+unlike your ex, we don't break hearts! 
+
+ </p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="service-block-inner">
                         <h3>We are Professional</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <p>From showing up early to mastering our techniques to accepting  remuneration to being a humorist to loving all your praise and blame , we are pro's already!
+</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="service-block-inner">
                         <h3>OUR STORIES</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                        <p>We are the Gen Z squad  came up with a "prozy" (productive+lazy ) idea for bringing out a top notch website for customized products, which would allow our audience to  order their own blueprinted cool t-shirts , designed together with our community. In short once and forever we are fun!
+</p>
                     </div>
                 </div>
             </div>
