--- a/service.html
+++ b/service.html
@@ -283,7 +283,10 @@
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="service-block-inner">
-                        
+			    <h3>OUR VISION</h3>
+                        <P>We, here at T-Pie, are devoted to giving the best that a piece of clothing should exhibit.
+T-Pie tries effortlessly to do the same with the sense of understanding and being more responsive and easily accessible to the customers. All this with the cheapest price with the advantage of being in the locality.
+</P>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
