All team Images changed

--- a/index.html
+++ b/index.html
@@ -488,12 +488,19 @@
 		</div> 
 		 
 		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="img/product/2.jpeg" class="img-fluid" alt="Image">
+			<img src="img/product/2.jpeg" class="img-fluid" id="myImg" alt="Image">
 		</div>    
 		
 		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
-			<img src="img/product/1.jpeg" class="img-fluid" alt="Image">
+			<img src="img/product/1.jpeg" class="img-fluid" id="myImg" alt="Image">
 		</div>    
+
+		<!-- The Modal -->
+			<div id="myModal" class="modal">
+				<span class="close">&times;</span>
+					<img class="modal-content" id="img">
+					<div id="caption"></div>
+			</div>
                 <!--div class="col-lg-3 col-md-6 special-grid best-seller">
                     <div class="products-single fix">
                         <div class="box-img-hover">
