--- a/service.html
+++ b/service.html
@@ -352,7 +352,9 @@ T-Pie tries effortlessly to do the same with the sense of understanding and bein
                             <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
                         </div>
                         <div class="team-description">
-                            <p>Web Developer
+                            <p>yogendra sankhla
+				    <br>
+				    Web Developer
 				    <br>
 “Great web design without functionality is like a sports car with no engine”
 				    <br>
@@ -415,7 +417,11 @@ Founder of T-pie
                             <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
                         </div>
                         <div class="team-description">
-                            <p></p>
+                            <p>Marketing Head
+				    <br>
+ “An ad is finished only when you no longer can find a single element to remove”
+				    <br>
+</p>
                         </div>
                         <hr class="my-0"> </div>
                 </div>
