All images added

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> T-PIE</strong></h1>
                             <p class="m-b-40"></p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="#">Shop Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -276,7 +276,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> T-PIE</strong></h1>
                             <p class="m-b-40"></p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="#">Shop Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -286,9 +286,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br> T-PIE</strong></h1>
+                            <h1 class="m-b-20"><strong>T-PIE<br>Clothing</strong></h1>
                             <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="#">Shop Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -368,16 +368,55 @@
 		</div>
 
        <div class="row special-list">
-
-		<div class="col-lg-3 col-md-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+		   
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/43.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/42.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/41.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/40.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/39.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6 col-6  special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/38.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/37.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<!--div class="col-lg-3 col-md-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/36.jpeg" class="img-fluid" alt="Image">
+		</div-->
+		<div class="col-lg-3 col-md-6 col-6  special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/35.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/34.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/33.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/32.jpeg" class="img-fluid" alt="Image">
+		</div>
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+			<img src="img/product/31.jpeg" class="img-fluid" alt="Image">
+		</div>		
+		<div class="col-lg-3 col-md-6  col-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
 			<img src="img/product/30.jpeg" class="img-fluid" alt="Image">
 		</div>
 		    
-		<div class="col-lg-3 col-md-6 special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
+		<div class="col-lg-3 col-md-6 col-6  special-grid best-seller" style="padding-top:20px; padding-bottom:20px;">
 			<img src="img/product/29.jpeg" class="img-fluid" alt="Image">
 		</div>    
 		 
-		<div class="col-lg-3 col-md-6 special-grid best-seller"  style="padding-top:20px; padding-bottom:20px;">
+		<div class="col-lg-3 col-md-6 col-6 special-grid best-seller"  style="padding-top:20px; padding-bottom:20px;">
 			<img src="img/product/28.jpeg" class="img-fluid" alt="Image">
 		</div>
 	   </div>
