--- a/about.html
+++ b/about.html
@@ -412,7 +412,7 @@ graphic Designer
                             <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
                         </div>
                         <div class="team-description">
-				<p><em>Abishek Sharma</em>
+				<p><em>Abhishek Sharma</em>
 				    <br>
 				    Marketing Head
 				    <br>
@@ -442,11 +442,11 @@ graphic Designer
                             <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
                         </div>
                         <div class="team-description">
-				<p><em>Vibhanshu jain</em></p>
+				<p><em>Vibhanshu jain</em>
 				<br>
 				Web Developer
 				<br>
-				“There are three responses to a piece of design- yes,no,and WOW!!! WOW is the one to aim for”
+				“There are three responses to a piece of design- yes,no,and WOW!!! WOW is the one to aim for”</p>
                         </div>
                         <hr class="my-0"> </div>
                 </div>
