--- a/service.html
+++ b/service.html
@@ -417,7 +417,9 @@ Founder of T-pie
                             <div class="icon"> <i class="fa fa-plus" aria-hidden="true"></i> </div>
                         </div>
                         <div class="team-description">
-                            <p>Marketing Head
+                            <p>Abhishek sharma
+				    <br>
+				    Marketing Head
 				    <br>
  “An ad is finished only when you no longer can find a single element to remove”
 				    <br>
